--- a/src/content/docs/learning-paths/get-started/concepts/index.mdx
+++ b/src/content/docs/learning-paths/get-started/concepts/index.mdx
@@ -1,4 +1,4 @@
----
+Use control + Shift+ m toggle the tab key moving focus Alternatively,use esc then tab to move to the net interactive ele/ent on the page.
 title: Getting started concepts
 pcx_content_type: overview
 sidebar:
